# Algorithms

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_script.py  main  main.c  main.ipynb  main.py  math_demo.ipynb  math_wrapper.py  w.csv
.github/workflows/: cunit-tests.yml
AdaptiveFilters/: AF.py
Bayesian/BasisFunction/: BF_fitting.py
Bayesian/Diffusion/: Diffusion_model.ipynb
Bayesian/GaussianProcesses/: GP.py
Bayesian/Trueskill/: Message.c  Message.h  Trueskill.c  Trueskill.py  main.ipynb
Bayesian/Trueskill/Trueksill_C_imp/: Makefile  Message.c  Message.h  Trueskill  Trueskill.c
Bayesian/VAE/: VAE.c  VAE.h  VAE.py  VAE_gen.py  VAE_manual.ipynb  VAE_model_generator.py  VAE_model_training.py  VAE_school.ipynb
Bayesian/VAE/Denoiser/: VAE_Denoiser.ipynb
Bayesian/VAE/Models/: CMakeLists.txt  LinearModel.c  LinearModel.h  NonLinearModel.c  NonLinearModel.h  model.c  model.h  model_api.c  model_api.h  model_api.py  vae_model.pth
Bayesian/VAE/Tests/: CMakeLists.txt  LinearModel_tests.c  LinearModel_tests.h  NonLinearModel_tests.c  NonLinearModel_tests.h  TrainedModel_tests.c  TrainedModel_tests.h  model_comparisson_tests.py  vae_encode.txt
Bayesian/VAE/Tests/data/: vae_decode.txt  vae_encode.txt  vae_weights.txt
Bayesian/VAE/test_folder/: tests.c
Filtering/: filter_lib.c
GaussianProcesses/: GP.py
Math/: CMakeLists.txt  matrix.c  matrix.h
Math/Tests/: CMakeLists.txt  matrix_tests.c  matrix_tests.h  stress_test.c  stress_test.h
Math/Tests/Test_Data/: generate_test_data.py
NN/: CNN.c  NN.c  NN.h  NN.ipynb  TrainCNN.c
NN/NN_c/: Makefile  NN.c  NN.h
NN/NN_c/src/: NN.c  NN.h
NN/NN_c/test_folder/: Matrix_test.c
NN/NN_c/utils/Matrix/: Matrix.c  Matrix.h
PitchShift/: PitchShift.ipynb  fft.ipynb  test.ipynb
test_folder/: CMakeLists.txt  LinearModel_test_suite.c  Math_test_suite.c  Matrix_test.c  Matrix_test_suite.c  NonLinearModel_test_suite.c  TrainedModel_test_suite.c
utils/: CMakeList.txt  FFT.c  Makefile  Matrix.c  Matrix.h  plot_helper.py  plot_lib.c  plot_lib.h  read_audio.c  test_matrix  wavLoader.py
utils/CUnit/: CTestTestfile.cmake  cmake_install.cmake  cunit_test
utils/Matrix/: CMakeLists.txt  Matrix.c  Matrix.h
utils/Tests/: CMakeLists.txt  Matrix_tests.c  Matrix_tests.h
utils/datatypes/: Q_15.c  Q_15.h
utils/test_folder/: CMakeLists.txt  Matrix_test.c
