find_package(OpenMP REQUIRED)
if(OpenMP_C_FOUND)
    message(STATUS "Found OpenMP, enabling...")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_C_FLAGS}")
endif()
add_library(MathFunctions matrix.c)
target_link_libraries(MathFunctions PRIVATE OpenMP::OpenMP_C)
